--- a/Undervisningsopgaver/js_objekter/01-dyrJson.html
+++ b/Undervisningsopgaver/js_objekter/01-dyrJson.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="">
-
+    <meta charset="UTF-8">
+    <title>JSON</title>
     <style>
-        #liste {
-            border: solid black 2px;
-            margin: 5vw;
+        article {
+            border: 1px solid #333;
+            padding: 10px;
+            margin: 1em;
         }
 
-        article {
-            margin: 0 auto;
-            padding: 2vw;
+        img {
+            max-width: 100px;
         }
 
     </style>
 </head>
 
 <body>
+    <section></section>
 
-    <section id="container">
-        <template>
-            <article id="liste">
-                <h3></h3>
-                <img src="" alt="">
-                <p>Type:</p>
-                <p id="p2">Levested:</p>
-            </article>
-        </template>
-    </section>
-
+    <template>
+        <article>
+            <h2></h2>
+            <img src="" alt="">
+            <p class="art"></p>
+            <p class="sted"></p>
+        </article>
+    </template>
     <script>
-        let container = document.querySelector("#container");
-        let dyrTemplate = document.querySelector("template");
+        const container = document.querySelector("section");
+        const temp = document.querySelector("template");
 
         const fil = "alleDyr.json";
 
-        async function hentdata(fil) {
-            const resultat = await fetch(fil);
-            const json = await resultat.json();
+        //Fetch er en "Asynkron metode(AJAX)" = derfor async function, som gør det muligt at hente json data
+        async function hentdata() {
+            const respons = await fetch(fil);
+            const json = await respons.json();
             vis(json);
         }
 
-
         function vis(dyr) {
-            console.log("dom er loaded");
-            //listen loopes
-            dyr.forEach(dyr => {
-                //udskriv i html
-                let klon = dyrTemplate.cloneNode(true).content;
-                klon.querySelector("h3").textContent = dyr.navn;
-                klon.querySelector("img").src = dyr.billede;
-                klon.querySelector("p").textContent += dyr.type;
-                klon.querySelector("#p2").textContent += dyr.levested;
+            //løb igennem array "dyr"
+            dyr.forEach(etDyr => {
+                const klon = temp.cloneNode(true).content;
+                klon.querySelector("h2").textContent = etDyr.navn;
+                klon.querySelector(".art").textContent = "Type: " + etDyr.type;
+                klon.querySelector(".sted").textContent = "Levested: " + etDyr.levested;
+                klon.querySelector("img").src = etDyr.billede;
                 container.appendChild(klon);
             })
         }
