øvelse ift single view

--- a/Undervisningsopgaver/single/02-detalje.html
+++ b/Undervisningsopgaver/single/02-detalje.html
@@ -23,6 +23,7 @@
 
         const medieurl = "https://persongalleri-5d3e.restdb.io/media/";
         let person;
+
         const myHeaders = {
 
             "x-apikey": "600fe9211346a1524ff12e31"
@@ -50,8 +51,5 @@
         function tilbageTilGalleri() {
             history.back();
         }
-
     </script>
-</body>
-
-</html>
+</body></html>
